<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_search"
        app:showAsAction="ifRoom"
        android:title="@string/search">
    </item>
    <item
        android:id="@+id/action_download"
        app:showAsAction="never"
        android:title="@string/download">
    </item>
    <item
        android:id="@+id/action_upload"
        app:showAsAction="never"
        android:title="@string/upload">
    </item>
    <item
        app:showAsAction="never"
        android:id="@+id/action_settings"
        android:title="@string/settings"
        android:onClick="openSettings">
    </item>
</menu>
